# Campus-Competition-Code

./: .gitignore  CALIBRATION_GUIDE.md  CMakeLists.txt  GITHUB_UPLOAD.md  readme.md
calibration/: calibrate_camera.cpp  capture.cpp
configs/: calibration.yaml  demo.yaml
io/: CMakeLists.txt  command.hpp
io/usbcamera/: usbcamera.cpp  usbcamera.hpp
tasks/auto_aim/: CMakeLists.txt  armor.cpp  armor.hpp  detector.cpp  detector.hpp  solver.cpp  solver.hpp
tests/: usbcamera_detect_test.cpp
tools/: CMakeLists.txt  logger.cpp  math_tools.cpp  math_tools.hpp
